Update the webpage
The GitHub ribbon is also revived.

Related issue: #5125

JerryScript-DCO-1.0-Signed-off-by: Zsolt Borbély zsborbely.u-szeged@partner.samsung.com

--- a/00.GETTING-STARTED.md
+++ b/00.GETTING-STARTED.md
@@ -21,11 +21,11 @@ Several scripts and tools help the building and development process, thus it is 
 
 - `bash` >= `4.3.11`
 - `cppcheck` >= `1.61`
-- `vera++` >= `1.2.1`
+- `clang-format-10` >= `10.0.0`
 - `python` >= `2.7.6`
 
 ```bash
-sudo apt-get install gcc gcc-arm-none-eabi cmake cppcheck vera++ python
+sudo apt-get install gcc gcc-arm-none-eabi cmake cppcheck clang-format-10 python
 ```
 
 To make our scripts run correctly, several shell utilities should be available on the system:
@@ -61,10 +61,10 @@ tools/build.py --debug --logging=on --error-messages=on --line-info=on
 python tools/build.py --cmake-param=CMAKE_PARAM
 ```
 
-**Set a profile mode (ES.next, ES5.1, minimal)**
+**Set a profile mode (es.next, minimal)**
 
 ```bash
-python tools/build.py --profile=es.next|es5.1|minimal
+python tools/build.py --profile=es.next|minimal
 ```
 
 See also the related [README.md](https://github.com/jerryscript-project/jerryscript/blob/master/jerry-core/profiles/README.md).
@@ -183,10 +183,10 @@ python tools/run-tests.py --check-signed-off
 python tools/run-tests.py --check-cppcheck
 ```
 
-**To run vera check**
+**To run format check**
 
 ```bash
-python tools/run-tests.py --check-vera
+python tools/run-tests.py --check-format
 ```
 
 **To get a list of all the available test options**
