--- a/01.CONFIGURATION.md
+++ b/01.CONFIGURATION.md
@@ -54,7 +54,7 @@ that can be used by the debugger to identify the currently executed source conte
 ### Profiles
 
 This option can be used to enable/disable available JavaScript language features by providing profile files. Profile files contain a list of C definitions that configure each individual feature.
-The `path` value for CMake and Python arguments should be a file path to the profile file, or one of `es.next`, `es5.1`, or `minimal`, which are the pre-defined profiles.
+The `path` value for CMake and Python arguments should be a file path to the profile file, or one of `es.next` or `minimal`, which are the pre-defined profiles.
 To see how a profile file should be created, or what configuration options are available in C, see the profile [README](https://github.com/jerryscript-project/jerryscript/blob/master/jerry-core/profiles/README.md).
 
 | Options |                                              |
@@ -200,7 +200,7 @@ This option is enabled by default.
 
 ### Memory statistics
 
-This option can be used to provide memory usage statistics either upon engine termination, or during runtime using the `jerry_get_memory_stats` jerry API function.
+This option can be used to provide memory usage statistics either upon engine termination, or during runtime using the `jerry_heap_stats` jerry API function.
 The feature can create a significant performance overhead, and should only be used for measurement purposes. This option is disabled by default.
 
 | Options |                                              |
@@ -309,7 +309,7 @@ in other projects. To achieve this, the following command can be executed to cre
 into the `amalgam` directory:
 
 ```sh
-$ python tools/amalgam.py --output-dir amalgam --jerry-core --jerry-port-default --jerry-math
+$ python tools/amalgam.py --output-dir amalgam --jerry-core --jerry-port --jerry-math
 ```
 
 (Note: In the example above, the command is executed from the project's root directory, but that is
@@ -320,8 +320,7 @@ The command creates the following files in the `amalgam` dir:
 * `jerryscript.c`
 * `jerryscript.h`
 * `jerryscript-config.h`
-* `jerryscript-port-default.c`
-* `jerryscript-port-default.h`
+* `jerryscript-port.c`
 * `jerryscript-math.c`
 * `math.h`
 
@@ -333,7 +332,7 @@ These files can be directly compiled with an application using the JerryScript A
 E.g., using a command similar to the one below:
 
 ```sh
-$ gcc -Wall -o demo_app demo_app.c amalgam/jerryscript.c amalgam/jerryscript-port-default.c amalgam/jerryscript-math.c -Iamalgam/
+$ gcc -Wall -o demo_app demo_app.c amalgam/jerryscript.c amalgam/jerryscript-port.c amalgam/jerryscript-math.c -Iamalgam/
 ```
 
 (Note: The headers must be available on the include path.)
