--- a/07.DEBUGGER.md
+++ b/07.DEBUGGER.md
@@ -84,8 +84,8 @@ Currently, `jerryx_debugger_rp_create ()` for raw packet transport layer and
 `jerryx_debugger_serial_create (const char* config)` for serial protocol
 are also available.)
 
-The resource name provided to `jerry_parse ()` is used by the client
-to identify the resource name of the source code. This resource name
+The source name provided to `jerry_parse ()` is used by the client
+to identify the source name of the source code. This source name
 is usually a file name.
 
 ## JerryScript debugger C-API interface
@@ -107,14 +107,14 @@ when a source code is received successfully.
 
 ```c
 typedef jerry_value_t
-(*jerry_debugger_wait_for_source_callback_t) (const jerry_char_t *resource_name_p,
-                                              size_t resource_name_size,
+(*jerry_debugger_wait_for_source_callback_t) (const jerry_char_t *source_name_p,
+                                              size_t source_name_size,
                                               const jerry_char_t *source_p,
                                               size_t source_size, void *user_p);
 ```
 
-- `resource_name_p` - resource (usually a file) name of the source code
-- `resource_name_size` - size of resource name
+- `source_name_p` - source (usually a file) name of the source code
+- `source_name_size` - size of source name
 - `source_p` - source code character data
 - `source_size` - size of source code
 - `user_p` - custom pointer passed to [jerry_debugger_wait_for_client_source](#jerry_debugger_wait_for_client_source)
@@ -140,6 +140,8 @@ jerry_debugger_is_connected (void);
 [doctest]: # (test="link")
 
 ```c
+#include <stdio.h>
+
 #include "jerryscript.h"
 #include "jerryscript-ext/debugger.h"
 
@@ -316,8 +318,8 @@ jerry_debugger_wait_for_client_source (jerry_debugger_wait_for_source_callback_t
  * Runs the source code received by jerry_debugger_wait_for_client_source.
  */
 static jerry_value_t
-wait_for_source_callback (const jerry_char_t *resource_name_p, /**< resource name */
-                          size_t resource_name_size, /**< size of resource name */
+wait_for_source_callback (const jerry_char_t *source_name_p, /**< source name */
+                          size_t source_name_size, /**< size of source name */
                           const jerry_char_t *source_p, /**< source code */
                           size_t source_size, /**< source code size */
                           void *user_p /**< user pointer */)
@@ -325,19 +327,21 @@ wait_for_source_callback (const jerry_char_t *resource_name_p, /**< resource nam
   (void) user_p;
 
   jerry_parse_options_t parse_options;
-  parse_options.options = JERRY_PARSE_HAS_RESOURCE;
-  parse_options.resource_name = jerry_create_string ((const jerry_char_t *) resource_name_p);
+  parse_options.options = JERRY_PARSE_HAS_SOURCE_NAME;
+  parse_options.source_name = jerry_string ((const jerry_char_t *) source_name_p,
+                                              (jerry_size_t) source_name_size,
+                                              JERRY_ENCODING_UTF8);
 
   jerry_value_t ret_val = jerry_parse (source_p,
                                        source_size,
                                        &parse_options);
-  jerry_release_value (parse_options.resource_name);
+  jerry_value_free (parse_options.source_name);
 
-  if (!jerry_value_is_error (ret_val))
+  if (!jerry_value_is_exception (ret_val))
   {
     jerry_value_t func_val = ret_val;
     ret_val = jerry_run (func_val);
-    jerry_release_value (func_val);
+    jerry_value_free (func_val);
   }
 
   return ret_val;
@@ -365,7 +369,7 @@ main (void)
                                                               NULL,
                                                               &run_result);
 
-      jerry_release_value (run_result);
+      jerry_value_free (run_result);
     }
     while (receive_status == JERRY_DEBUGGER_SOURCE_RECEIVED);
 
@@ -413,43 +417,6 @@ main (void)
   jerry_size_t my_output_size = sizeof (my_output);
 
   jerry_debugger_send_output (my_output, my_output_size);
-
-  jerry_cleanup ();
-}
-```
-
-### jerry_debugger_send_log
-
-**Summary**
-
-Sends the program's log to the debugger client.
-
-**Prototype**
-
-```c
-void
-jerry_debugger_send_log (jerry_log_level_t level, const jerry_char_t *buffer, jerry_size_t string_size)
-```
-
-**Example**
-
-[doctest]: # (test="link")
-
-```c
-#include "jerryscript.h"
-#include "jerryscript-ext/debugger.h"
-
-int
-main (void)
-{
-  jerry_init (JERRY_INIT_EMPTY);
-  jerryx_debugger_after_connect (jerryx_debugger_tcp_create (5001)
-                                 && jerryx_debugger_ws_create ());
-
-  jerry_char_t my_log[] = "Custom diagnostics";
-  jerry_size_t my_log_size = sizeof (my_log);
-
-  jerry_debugger_send_log (JERRY_LOG_LEVEL_DEBUG, my_log, my_log_size);
 
   jerry_cleanup ();
 }
