--- a/14.EXT-REFERENCE-HANDLE-SCOPE.md
+++ b/14.EXT-REFERENCE-HANDLE-SCOPE.md
@@ -30,7 +30,7 @@ JerryScript only supports a single nested hierarchy of scopes. There is only one
 static jerry_value_t
 create_object (void)
 {
-  jerry_value_t obj = jerry_create_object ();
+  jerry_value_t obj = jerry_object ();
   return obj;
 } /* create_object */
 
@@ -51,7 +51,7 @@ main (void)
   jerry_init (JERRY_INIT_EMPTY);
 
   test_handle_scope_val ();
-  jerry_gc (JERRY_GC_PRESSURE_LOW);
+  jerry_heap_gc (JERRY_GC_PRESSURE_LOW);
 
   jerry_cleanup ();
 } /* main */
@@ -76,7 +76,7 @@ create_object (void)
 {
   jerryx_escapable_handle_scope scope;
   jerryx_open_escapable_handle_scope (&scope);
-  jerry_value_t obj = jerryx_create_handle (jerry_create_object ());
+  jerry_value_t obj = jerryx_create_handle (jerry_object ());
 
   jerry_value_t escaped_obj;
   jerryx_escape_handle(scope, obj, &escaped_obj);
@@ -103,7 +103,7 @@ main (void)
   jerry_init (JERRY_INIT_EMPTY);
 
   test_handle_scope_val ();
-  jerry_gc (JERRY_GC_PRESSURE_LOW);
+  jerry_heap_gc (JERRY_GC_PRESSURE_LOW);
 
   jerry_cleanup ();
 } /* main */
@@ -112,8 +112,8 @@ main (void)
 **See also**
 
 - [jerry_value_t](../api-reference#jerry_value_t)
-- [jerry_acquire_value](../api-reference#jerry_acquire_value)
-- [jerry_release_value](../api-reference#jerry_release_value)
+- [jerry_value_copy](../api-reference#jerry_value_copy)
+- [jerry_value_free](../api-reference#jerry_value_free)
 
 ## Pre-allocated list of handle scopes and handles
 
