--- a/09.EXT-REFERENCE-ARG.md
+++ b/09.EXT-REFERENCE-ARG.md
@@ -254,7 +254,7 @@ my_external_handler (const jerry_value_t function_obj,
                                                                mapping,
                                                                4);
 
-  if (jerry_value_is_error (rv))
+  if (jerry_value_is_exception (rv))
   {
     /* Handle error. */
     return rv;
@@ -265,7 +265,7 @@ my_external_handler (const jerry_value_t function_obj,
    * required_bool, required_str and optional_num can now be used.
    */
 
-  return jerry_create_undefined (); /* Or return something more meaningful. */
+  return jerry_undefined (); /* Or return something more meaningful. */
 }
 ```
 
@@ -650,7 +650,7 @@ my_external_handler (const jerry_value_t function_obj,
                                                       mapping,
                                                       1);
 
-  if (jerry_value_is_error (rv))
+  if (jerry_value_is_exception (rv))
   {
     /* Handle error. */
     return rv;
@@ -661,7 +661,7 @@ my_external_handler (const jerry_value_t function_obj,
    * required_bool, required_num and optional_num can now be used.
    */
 
-   return jerry_create_undefined (); /* Or return something more meaningful. */
+   return jerry_undefined (); /* Or return something more meaningful. */
 }
 
 ```
@@ -741,7 +741,7 @@ my_external_handler (const jerry_value_t function_obj,
                                                       mapping,
                                                       1);
 
-  if (jerry_value_is_error (rv))
+  if (jerry_value_is_exception (rv))
   {
     /* Handle error. */
     return rv;
@@ -752,7 +752,7 @@ my_external_handler (const jerry_value_t function_obj,
    * required_bool, required_num and optional_num can now be used.
    */
 
-   return jerry_create_undefined (); /* Or return something more meaningful. */
+   return jerry_undefined (); /* Or return something more meaningful. */
 }
 
 ```
