--- a/docs/10.EXT-REFERENCE-HANDLER.md
+++ b/docs/10.EXT-REFERENCE-HANDLER.md
@@ -24,7 +24,7 @@ The engine must be initialized before specifying the `jerry_value_t` in the stru
 typedef struct {
   const char *name;
   jerry_value_t value;
-} jerryx_function_list_entry;
+} jerryx_property_entry;
 ```
 
 **See also**
